doc starter, upgrade release

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.bxforce</groupId>
     <artifactId>commons-vfs2-spring-boot</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.1-RELEASE</version>
     <packaging>pom</packaging>
 
     <name>commons-vfs2-spring-boot</name>
